tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldCompile/syntax02/Test.java


public class Test {
	interface A {
		boolean equals(Object o);
	}
}