tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax11/Test.java


public class Test {
	interface A {
		default static void m() { 
			
		} 
	}
}